20180520 fix:  img-responsive + center-block

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Lesson21.Bottstrap3</title>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+		<link rel="stylesheet" href="vendors/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
+		<link rel="stylesheet" href="vendors/bootstrap-3.3.7-dist/css/bootstrap-theme.css">
       <style>
           /*
           0... 767   .col-xs Телефоны
@@ -41,39 +43,31 @@
                 <p>At Wisdon Pet Medicine, we strive to blend the best in traditional and alternative healing techniques to diagnose and treat compabion animals, including dogs, cats, birds, reptiles, and fish.
                 </p>
             </div>
-            <div class="col-md-4 text-center">
-                <img src="img/jumbotron.jpg" alt="" class="img-rounded --img-responsive">
+            <div class="col-md-4">
+                <img src="img/jumbotron.jpg" alt="" class="img-rounded img-responsive center-block">
             </div>
         </div>
         <div class="row row-feedback">
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="text-center">
-                    <img class="img-rounded --img-responsive" src="img/gsd.jpg" alt="gsd">
-                </div>
+								<img class="img-rounded img-responsive  center-block" src="img/gsd.jpg" alt="gsd">
                 <p class="h4 caption">Thanks for helping our German Shepherd</p>
                 <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquam aut culpa cum, cupiditate ducimus fuga illo incidunt ipsam laborum molestias necessitatibus nesciunt nobis odio odit omnis porro qui quibusdam repudiandae soluta tempore veniam voluptatum! A aspernatur consequatur, dicta ducimus ea earum et exercitationem, nemo odit provident, quos sequi voluptatum!</p>
                 <a href="#">Read more &gt;&gt;</a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="text-center">
-                    <img class="img-rounded --img-responsive" src="img/kitten.jpg" alt="kitten">
-                </div>
+								<img class="img-rounded img-responsive center-block" src="img/kitten.jpg" alt="kitten">
                 <p class="h4">Our diabetic kitty is better</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias, aliquam aliquid aspernatur cumque cupiditate deserunt eaque est et eveniet fugiat in iste molestiae obcaecati possimus quae quisquam quos ratione reprehenderit sapiente soluta temporibus tenetur ut voluptas voluptate voluptates voluptatibus. A adipisci cum dolorum eveniet facere iure iusto minus neque, non nostrum porro quaerat quo similique sunt voluptatibus! Aliquid beatae consectetur dolorum eum iure non praesentium ratione reiciendis rem unde.</p>
                 <a href="#">Read more &gt;&gt;</a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="text-center">
-                    <img class="img-rounded --img-responsive" src="img/bulldog.jpg" alt="bulldog">
-                </div>
+								<img class="img-rounded img-responsive center-block" src="img/bulldog.jpg" alt="bulldog">
                 <p class="h4">Our grape-loving dog</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda earum excepturi exercitationem illo iure nam nemo perferendis qui, recusandae suscipit ullam velit vitae! Accusantium aspernatur assumenda blanditiis culpa dignissimos distinctio dolore dolores eaque illum ipsum iste labore laboriosam laudantium magni nemo nisi qui quia quis unde, voluptas! Obcaecati quas repudiandae ullam voluptate voluptatem. Asperiores eveniet expedita laboriosam praesentium sapiente similique sunt ut veritatis? Accusantium error molestias tempore! Aliquid consectetur maxime nobis nostrum, pariatur placeat quae quod rem repellat soluta?</p>
                 <a href="#">Read more &gt;&gt;</a>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="text-center">
-                    <img class="img-rounded --img-responsive" src="img/goldfish.jpg" alt="goldfish">
-                </div>
+								<img class="img-rounded img-responsive center-block" src="img/goldfish.jpg" alt="goldfish">
                 <p class="h4">A dog antibiotic cured our fish</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet assumenda consectetur cum eligendi magni nemo obcaecati porro repellendus sequi. Accusamus atque delectus esse explicabo facilis, impedit iusto maxime nisi provident quis reiciendis rem repellat reprehenderit repudiandae ut voluptas voluptatem. Ab aliquam asperiores consectetur, delectus distinctio doloribus fugit ipsum laboriosam quae voluptate! Consectetur cum magni placeat quod voluptate? Accusamus adipisci architecto asperiores commodi consectetur consequatur corporis culpa dignissimos ea enim explicabo fugiat modi, necessitatibus nesciunt numquam odio quisquam reprehenderit sit veniam voluptate. Distinctio eius excepturi nostrum quae qui, ratione rerum! Quis?</p>
                 <a href="#">Read more &gt;&gt;</a>
@@ -86,6 +80,8 @@
     </div>
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+		<script type="text/javascript" src="vendors/jquery-3.3.1/jquery-3.3.1.js"></script>
+		<script type="text/javascript" src="vendors/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
   </body>
 </html>
