--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Lesson21.Bottstrap3</title>
     <!-- Latest compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-		<link rel="stylesheet" href="vendors/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="vendor/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <!-- Optional theme -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
-		<link rel="stylesheet" href="vendors/bootstrap-3.3.7-dist/css/bootstrap-theme.css">
+		<link rel="stylesheet" href="vendor/bootstrap-3.3.7-dist/css/bootstrap-theme.css">
       <style>
           /*
           0... 767   .col-xs Телефоны
@@ -81,7 +81,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
-		<script type="text/javascript" src="vendors/jquery-3.3.1/jquery-3.3.1.js"></script>
-		<script type="text/javascript" src="vendors/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+		<script type="text/javascript" src="vendor/jquery-3.3.1/jquery-3.3.1.js"></script>
+		<script type="text/javascript" src="vendor/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
   </body>
 </html>
